// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageBottomCardContainer > should match the snapshot 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-j2r86j-MuiPaper-root"
    >
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <div
          class="MuiStack-root css-3y1137-MuiStack-root"
        />
      </div>
      <div
        class="MuiBox-root css-zv7ju9"
      >
        <div
          class="MuiBox-root css-0"
        >
          <h2
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            title
          </h2>
        </div>
        <div
          class="MuiStack-root css-19l17dh-MuiStack-root"
        />
      </div>
    </section>
  </div>
</body>
`;

exports[`PageBottomCardContainer > should match the snapshot with description 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-j2r86j-MuiPaper-root"
    >
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <div
          class="MuiStack-root css-3y1137-MuiStack-root"
        />
      </div>
      <div
        class="MuiBox-root css-zv7ju9"
      >
        <div
          class="MuiBox-root css-0"
        >
          <h2
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            title
          </h2>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
          >
            description
          </p>
        </div>
        <div
          class="MuiStack-root css-19l17dh-MuiStack-root"
        />
      </div>
    </section>
  </div>
</body>
`;

exports[`PageBottomCardContainerSkeleton > should match the snapshot 1`] = `
<body>
  <div>
    <span
      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-1q3jyn0-MuiSkeleton-root"
    />
  </div>
</body>
`;
